remove: AuthType이 항상 Direct이기 때문에 삭제